slides.css
#current_slide {
  padding: 10px;
}

button,
input {
  /* box-shadow: 0 0 5px black; */
  animation: hey-notice-this 1s ease 1s 1 forwards;
}

button {
  text-decoration: none;
  transition: 0.2s;
  color: white;
  width: 3rem;
  font-weight: bold;
}

button:hover,
button:focus,
input:hover,
input:focus {
  background: green;
  color: white;
  box-shadow: 5px 5px 10px 1px black;
}

button:active,
input:active {
  background: lime;
  color: black;
  box-shadow: 5px 5px 15px 2px black;
}

button[disabled="true"] {
  background: inherit;
  color: #33333388;
  box-shadow: none;
}

input {
  width: 3rem;
  background: #333;
  color: white;
  box-shadow: 2px 2px 5px black;
  font-weight: bold;
  border: none;
  text-align: center;
  padding-left: 20px;
}

button#add_big_text {
  position: relative;
}

button#add_big_text:after {
  content: "abc";
  position: absolute;
  font-size: 1.5rem;
  align-items: center;
  left: 0.25rem;
  top: 0;
}

input#select_image,
input#select_json_file {
  display: none;
}

.material-icons {
  font-size: 2em;
  margin: -1em;
  vertical-align: middle;
  position: relative;
  top: -0.05rem;
}

#controls {
  text-align: center;
  padding: 0.5rem;
  width: 550px;
  margin: auto;
  position: fixed;
  bottom: 1rem;
  left: calc(50% - 550px / 2 - 0.5rem / 2);
  box-shadow: 0 1px 5px black;
  animation: jump-a-little 0.25s ease 1s forwards;
}

@keyframes jump-a-little {
  0% {
    bottom: 1rem;
  }
  50% {
    bottom: 2rem;
  }
  100% {
    bottom: 1rem;
  }
}

@keyframes hey-notice-this {
  50% {
    background: lime;
    color: black;
    box-shadow: 5px 5px 15px 2px black;
  }
}

p {
  color: white;
  mix-blend-mode: difference;
}

.hide-on-first-load {
  visibility: hidden;
  width: 0;
  height: 0;
  margin: 0;
  padding: 0;
}

span {
  position: absolute;
}

span:before {
  position: relative;
  text-align: center;
  z-index: -1;
  color: white;
  background: black;
  padding: 0;
  border-radius: 3px;
  -webkit-transition: top 0.25s;
  transition: top 0.25s;
  top: 0;
  content: "";
}

:hover + span:before {
  top: -2rem;
  padding: 3px;
}

button#left:hover + span:before {
  content: attr(data-before);
  left: var(--left);
}

button#right:hover + span:before {
  content: attr(data-before);
  left: var(--left);
}

input#slide_number:hover + span:before {
  content: "Slide number";
  left: -5.75em;
}

button#add_text:hover + span:before {
  content: "Add text";
  left: -3.85em;
}

button#add_big_text:hover + span:before {
  content: "Add big text";
  left: -4.7em;
}

button#add_image:hover + span:before {
  content: "Add image";
  left: -4.45em;
}

button#fullscreen:hover + span:before {
  content: attr(data-before);
  left: var(--left);
}

button#save:hover + span:before {
  content: "Save slide data";
  left: -5.35em;
  white-space: nowrap;
}

button#upload:hover + span:before {
  content: "Reuse slide data";
  left: -5.25em;
  white-space: nowrap;
}

button#delete:hover + span:before {
  content: "Delete";
  left: -3.2em;
  white-space: nowrap;
}

